--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -73,7 +73,7 @@
 
 								<li class="[ row mb-2 justify-content-center align-items-baseline ]">
 									<div class="[ col-8 ]">
-										{{ form_data.class_object(class="form-control") }}
+										{{ form_data.class_object(class="form-control select") }}
 									</div>
 								</li>
 
@@ -165,7 +165,7 @@
 
 
 <script id="js-template_keys" type="text/template">
-	<select name="keys" class="js-column_key [ form-control ]">
+	<select name="keys" class="select-key js-column_key [ form-control ]">
 		<option value="">Select a Column</option>
 	</select>
 </script>
@@ -177,7 +177,7 @@
 </script>
 
 <script id="js-template_artist" type="text/template">
-	<select name="values" class="js-column_artist [ form-control ]">
+	<select name="values" class="select-value js-column_artist [ form-control ]">
 		<option value="">Select a Category</option>
 		<option value="pName">Last/Primary Name</option>
 		<option value="fName">First Name</option>
@@ -189,7 +189,7 @@
 </script>
 
 <script id="js-template_artwork" type="text/template">
-	<select name="values" class="js-column_artwork [ form-control ]">
+	<select name="values" class="select-value js-column_artwork [ form-control ]">
 		<option value="">Select a Category</option>
 		<option value="name">Artwork Name</option>
 		<option value="artists">Artist</option>
@@ -199,7 +199,7 @@
 </script>
 
 <script id="js-template_park" type="text/template">
-	<select name="values" class="js-column_park [ form-control ]">
+	<select name="values" class="select-value js-column_park [ form-control ]">
 		<option value="">Select a Category</option>
 		<option value="name">Park Name</option>
 		<option value="park_id">Park ID</option>
@@ -212,7 +212,7 @@
 </script>
 
 <script id="js-template_exhibition" type="text/template">
-	<select name="values" class="js-column_exhibition [ form-control ]">
+	<select name="values" class="select-value js-column_exhibition [ form-control ]">
 		<option value="">Select a Category</option>
 		<option value="name">Exhibition Name</option>
 		<option value="start_date">Start Date</option>
@@ -224,7 +224,7 @@
 </script>
 
 <script id="js-template_org" type="text/template">
-	<select name="values" class="js-column_org [ form-control ]">
+	<select name="values" class="select-value js-column_org [ form-control ]">
 		<option value="">Select a Category</option>
 		<option value="name">Organization Name</option>
 		<option value="website">Website</option>
