Add media-query breakpoint mixin

--- a/app/static/style/src/base/_mixins.scss
+++ b/app/static/style/src/base/_mixins.scss
@@ -7,3 +7,22 @@
   background-color: color($bg-color) !important;
   border-color: color($br-color) !important;
 }
+
+
+$breakpoints: (
+  s: 576px,
+  m: 768px,
+  l:  992px,
+  xl: 1200px
+);
+
+
+@mixin query($breakpoint) {
+  // If the key exists in the map
+  @if map-has-key($breakpoints, $breakpoint) {
+    // Prints a media query based on the value
+    @media (min-width: map-get($breakpoints, $breakpoint)) {
+      @content;
+    }
+  }
+}
