Add comments for media-query breaks

--- a/app/static/style/src/base/_mixins.scss
+++ b/app/static/style/src/base/_mixins.scss
@@ -16,6 +16,11 @@ $breakpoints: (
   xl: 1200px
 );
 
+/* Small devices (landscape phones, 576px and up) */
+/* Medium devices (tablets, 768px and up) */
+/* Large devices (desktops, 992px and up) */
+/* Extra large devices (large desktops, 1200px and up) */
+
 
 @mixin query($breakpoint) {
   // If the key exists in the map
