Update import li instructions
Switch:
Selections w/ * need to be imported together so they don’t throw an error
with:
Selections w/ * need to be included together so they can import successfully

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -90,7 +90,7 @@
 								<li>Select the object type you’re importing</li>
 								<li>Match the <b>Column</b> you want to import with the object <b>Category</b>—Don’t worry about the order!</li>
 								<li>Name options are required</li>
-								<li>Selections w/ <b>*</b> need to be imported together so they don’t throw an error</li>
+								<li>Selections w/ <b>*</b> need to be included together so they can import successfully</li>
 							</ol>
 
 						</div>
