--- a/app/static/style/src/base/_forms.scss
+++ b/app/static/style/src/base/_forms.scss
@@ -65,6 +65,21 @@ label {
 }
 
 
+// Tables
+
+.table {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  overflow: hidden;
+
+  & thead.table-head th {
+    background: color(green--l);
+    border: none;
+    font-weight: 400;
+  }
+}
+
+
 
 /* Import.html-specific items */
 .arrow-import {
