Add jinja sort of artwork.artists in table rows
Sort by artist.name asc

--- a/app/templates/exhibition.html
+++ b/app/templates/exhibition.html
@@ -105,7 +105,7 @@
 											<a href="{{ url_for('park', id=item.nycpark.id) }}">{{ item.nycpark.name }}</a>
 										</td>
 										<td>
-											{% for artist in item.artw.artists %}
+											{% for artist in item.artw.artists|sort(attribute='name') %}
 												<p class="[ m-0 ]">
 													<a href="{{ url_for('artist', id=artist.id) }}">{{ artist.name }}</a>
 												</p>
